--- a/Revisão/atv2.html
+++ b/Revisão/atv2.html
@@ -33,6 +33,17 @@
       section {
          display: flex;
          justify-content: end;
+
+      }
+      .resposta{
+         max-width: 400px;
+
+         word-wrap: break-word;
+
+      }
+      article{
+         margin-left: 1rem;
+
       }
    
    </style>
@@ -69,9 +80,10 @@
 
          let resposta = ''
          for (let i = number.value; i >= 1; i--) {
-            resposta = i
+            // resposta = i
+            resposta += i + '\n';
             // console.log(resposta); 
-         resultado.textContent = `Entre ${number.value} e 1 : ${resposta.value}`
+         resultado.textContent = `Entre ${number.value} e 1 : ${resposta}`
 
          }
 
