--- a/Revisão/teste/teste2.html
+++ b/Revisão/teste/teste2.html
@@ -1,22 +1,46 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Registro de Produtos</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+   <style>
+        *{
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        main{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
+        article{
+          margin-left: 1rem;
+                }
+    </style>
 </head>
 <body>
-  <label for="nome">Nome do Produto:</label>
-  <input type="text" id="nome">
-  <br>
-  <label for="preco">Preço do Produto:</label>
-  <input type="number" id="preco">
-  <br>
-  <button onclick="registrarProduto()">Registrar Produto</button>
-  <br>
-  <h2>Informações dos Produtos:</h2>
-  <ul id="listaProdutos"></ul>
-  <p>Quantidade de Produtos: <span id="quantidadeProdutos">0</span></p>
-  <p>Soma dos Preços: R$ <span id="somaPrecos">0</span></p>
-
+ <main>
+  <section><img src="../img/bingo.png" alt=""></section>
+  <article>
+  <h1>Conta do Mês</h1>
+    
+    <label for="nome">Descrição:</label>
+    <input type="text" id="nome">
+    <br>
+    <label for="preco">Valor da conta:</label>
+    <input type="number" id="preco">
+    <br>
+    <button onclick="registrarProduto()">Registrar Conta</button>
+    <br>
+    <ul id="listaProdutos"></ul>
+    <p>Quantidade de Produtos: <span id="quantidadeProdutos">0</span></p>
+    <p>Soma dos Preços: R$ <span id="somaPrecos">0</span></p>
+  </article>
+ </main>
   <script>
     let produtos = [];
     let quantidadeProdutos = 0;
